tests/machine/x/ocaml/str_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/str_builtin.ml", line 21, characters 2-15:
21 |   print_endline __show (123);
       ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 21):
  19 | 
  20 | let () =
  21 |   print_endline __show (123);
  22 | 
